--- a/css/style1.css
+++ b/css/style1.css
@@ -47,37 +47,14 @@ h2 {
   color: #000;
   font: bolder 150% Helvetica, Sans-Serif;
   line-height: 1.2;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.13em;
 }
 
 hr {
     display: block;
     border: 0;
-    border-top: 0px solid #000;
+    border-top: 3px solid #000;
     padding-bottom: 20px;
-}
-
-ul.head {
-  list-style: none;
-  text-align: left;
-  position: fixed;
-  left: 0;
-  top: 0;
-}
-
-ul.cat-nav {
-  list-style: none;
-  text-align: center;
-  padding-top: 30px;
-  padding-bottom: 10px;
-}
-
-ul.cat-nav li {
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 10px;
-  padding-left: 0px;
-  letter-spacing: 0.03em;
 }
 
 #menu {
@@ -92,47 +69,49 @@ ul.cat-nav li {
   display: block;
 }
 
-ul.cat-center {
+
+img.nav {
+  margin: 10px 10px;
+}
+
+ul.nav {
   list-style: none;
   text-align: center;
-  padding-top: 0px;
-  padding-bottom: 10px;
-}
-
-ul.cat-center li {
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 10px;
-  padding-left: 0px;
-  letter-spacing: 0.03em;
-}
-
-img.nav-bottom {
-  margin: 15px 10px;
-}
-
-
-ul.nav-bottom {
-  list-style: none;
-  text-align: center;
-  position: fixed;
+  position: relative;
   box-sizing: border-box;
   border: 0px solid #000;
   background-color: #fff;
-  /**adjust location**/
-  right: 0px;
-  bottom: 5px;
-  padding: 0;
-  width: 100%;
+  border-style: solid;
+  border-width: 0px 0px 0px 0px;
+  padding: 15px 0px 0px 0px;
 }
 
-ul.nav-bottom li {
+ul.nav li {
   display: inline-block;
   padding-top: 0px;
   padding-bottom: 0px;
   padding-right: 0px;
   padding-left: 0px;
   letter-spacing: 0.04em;
+}
+
+.footer {
+
+    width: 100%;
+    background-image: none;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+    left: 0pt;
+    /*
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    */
 }
 
 .wrapper {
