--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ html {
   height: 100%;
 }
 
+.mySlides1, .mySlides2 {display: none}
+
 body {
   background-color: #fff;
   font: .8em/150% Arial, Helvetica, sans-serif;
