--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a:visited {
 
 h1 {
   color: #000;
-  font: bolder 300% Helvetica, Sans-Serif;
+  font: bolder 700% Helvetica, Sans-Serif;
   line-height: 1.2;
   letter-spacing: 0.03em;
   padding-top: 0px;
@@ -47,7 +47,7 @@ h1 {
 
 h2 {
   color: #000;
-  font: bolder 50% Helvetica, Sans-Serif;
+  font: bolder 150% Times, Sans-Serif;
   line-height: 1.2;
   letter-spacing: 0.13em;
 }
