--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h1 {
 
 h2 {
   color: #000;
-  font: bolder 150% Arial, Sans-Serif;
+  font: bolder 200% Helvetica, Sans-Serif;
   line-height: 1.2;
   letter-spacing: 0.13em;
 }
